packages/build/tests/error/fixtures/colors/plugin.js
'use strict'

const { red } = require('chalk')

module.exports = {
  onPreBuild() {
    throw new Error(red('ColorTest'))
  },
}
